--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "pg": "^6.4.2",
-    "pug": "2.0.0-beta11"
+    "pg-hstore": "^2.3.2",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
