--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.4",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.5.9",
     "express": "~4.16.0",
     "fortnite-api": "^2.11.0",
     "http-errors": "~1.6.2",
+    "http-server": "^0.11.1",
     "morgan": "~1.9.0",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
+    "react": "^16.3.2",
+    "react-router": "^4.2.0",
     "sequelize": "^4.37.6",
-    "sequelize-cli": "^4.0.0"
+    "sequelize-cli": "^4.0.0",
+    "webpack": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
