--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "fortnitetracker",
   "version": "0.0.0",
+  "main": "webpack.config.js",
   "private": true,
   "scripts": {
     "start:dev": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch"
   },
   "dependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -22,10 +28,13 @@
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
     "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
-    "webpack": "^4.6.0"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
