--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:dev": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "babel": "^6.23.0",
@@ -30,6 +31,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
