--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fortnite-api": "^2.11.0",
     "http-errors": "~1.6.2",
     "http-server": "^0.11.1",
+    "https": "^1.0.0",
     "morgan": "~1.9.0",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
