--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.9",
     "express": "~4.16.0",
-    "fortnite-api": "^2.11.0",
+    "fortnite": "^4.1.1",
     "http-errors": "~1.6.2",
     "http-server": "^0.11.1",
     "https": "^1.0.0",
