--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-server": "^0.11.1",
     "https": "^1.0.0",
     "morgan": "~1.9.0",
+    "mysql2": "^1.5.3",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
