--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
+    "serve-favicon": "^2.5.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2"
